# backend/model/liquidityModel.go
@@ -84,13 +84,26 @@ func (p *Model) SwapLiquidity(poolAddress common.Address, input string, amount i
 	return protocol.SuccessData(tx.Hash().Hex(), protocol.OK)
 }
 
-func (p *Model) AddLiquidity(_desiredAmountA int64, _desiredAmountB int64, pk string, token1Address string, token2Address string) *protocol.ApiResponse[any] {
-	contracts, err := contracts.NewLiquidity(p.liquidityAddress, p.client)
+func (p *Model) AddLiquidity(_desiredAmountA int64, _desiredAmountB int64, pk string, symA string, symB string) *protocol.ApiResponse[any] {
+
+	//  심볼 2개 합쳐서 pool 이름 구하기 -> pool 이름을 주소 구하기 -> 두개 token Address도 나온다
+	// 심볼1-심볼2
+	poolContracts, err := liquidityFactoryContracts.NewLiquidityFactory(p.liquidityFactoryAddresss, p.client)
 	if err != nil {
 		return protocol.Fail(err, 500)
 	}
-	tokenAAddress := common.HexToAddress(token1Address)
-	tokenBAddress := common.HexToAddress(token2Address)
+	poolAddress, err := poolContracts.GetAddressWithName(&bind.CallOpts{}, symA+"-"+symB)
+	if err != nil {
+		return protocol.Fail(err, 500)
+	}
+	contracts, err := contracts.NewLiquidity(poolAddress, p.client)
+	if err != nil {
+		return protocol.Fail(err, 500)
+	}
+	tokenAAddress, tokenBAddress, err := contracts.GetTokenAddress(&bind.CallOpts{})
+	if err != nil {
+		return protocol.Fail(err, 500)
+	}
 	tokenAContracts, err := tokenContracts.NewERC20(tokenAAddress, p.client)
 	if err != nil {
 		return protocol.Fail(err, 500)
@@ -111,11 +124,11 @@ func (p *Model) AddLiquidity(_desiredAmountA int64, _desiredAmountB int64, pk st
 		return protocol.Fail(err, 500)
 	}
 	// TODO : Approve 2 토큰하기
-	_, err = tokenAContracts.Approve(transactorOpts, p.liquidityAddress, inputAmountA)
+	_, err = tokenAContracts.Approve(transactorOpts, poolAddress, inputAmountA)
 	if err != nil {
 		return protocol.Fail(err, 500)
 	}
-	_, err = tokenBContracts.Approve(transactorOpts, p.liquidityAddress, inputAmountB)
+	_, err = tokenBContracts.Approve(transactorOpts, poolAddress, inputAmountB)
 	if err != nil {
 		return protocol.Fail(err, 500)
 	}
@@ -126,8 +139,18 @@ func (p *Model) AddLiquidity(_desiredAmountA int64, _desiredAmountB int64, pk st
 	return protocol.SuccessData(tx.Hash().Hex(), protocol.OK)
 }
 
-func (p *Model) BalanceOf(strAddress string) *protocol.ApiResponse[any] {
-	instance, err := contracts.NewLiquidity(p.liquidityAddress, p.client)
+func (p *Model) BalanceOf(poolName string, strAddress string) *protocol.ApiResponse[any] {
+
+	liquidityFactoryContracts, err := liquidityFactoryContracts.NewLiquidityFactory(p.liquidityFactoryAddresss, p.client)
+	if err != nil {
+		return protocol.Fail(err, 500)
+	}
+	poolAddress, err := liquidityFactoryContracts.GetAddressWithName(&bind.CallOpts{},poolName)
+	if err != nil {
+		return protocol.Fail(err, 500)
+	}
+
+	instance, err := contracts.NewLiquidity(poolAddress, p.client)
 	if err != nil {
 		return protocol.Fail(err, 500)
 	}
